--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   file_picker: ^10.1.2  # Работа с выбором файлов
   url_launcher: ^6.1.10
   open_file: ^3.3.2
+  sqflite: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
